<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="3"
    app:cardCornerRadius="@dimen/dp10"
    android:layout_margin="@dimen/dp10"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/date"
            android:background="@drawable/outline_bottom_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/storeCode"
            android:background="@drawable/outline_bottom_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/Number"
            android:background="@drawable/outline_bottom_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/giogiao"
            android:background="@drawable/outline_bottom_dark"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>




